google drive writer working prototype

--- a/reee_port_01/Views/MainWindow.xaml
+++ b/reee_port_01/Views/MainWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:reee_port_01"
         mc:Ignorable="d"
-        Title="reee: port" Height="120" MinHeight="120" MaxHeight="120" Width="800" MinWidth="300" Initialized="Application_Startup">
+        Title="reee: port" Height="114" MinHeight="120
+" MaxHeight="120" Width="800" MinWidth="300" Initialized="Application_Startup">
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20*"/>
             <ColumnDefinition Width="79*"/>
         </Grid.ColumnDefinitions>
-        <ComboBox x:Name="NoteType" TabIndex="1" Margin="20,15,20,0" VerticalAlignment="Top" Height="25" FontSize="14" SelectionChanged="NoteType_SelectionChanged" Foreground="Black" BorderBrush="{x:Null}" Background="{x:Null}" VerticalContentAlignment="Center"/>
+        <ComboBox x:Name="NoteType" TabIndex="1" Margin="20,15,20,0" VerticalAlignment="Top" Height="25" FontSize="14" Foreground="Black" BorderBrush="{x:Null}" Background="{x:Null}" VerticalContentAlignment="Center"/>
         <TextBox x:Name="NoteField" TabIndex="0" Height="25" Margin="0,15,20,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" Grid.Column="1" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center"/>
         <TextBlock x:Name="NoteTypeHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Key ↑ or ↓" VerticalAlignment="Top" Foreground="Silver" Height="16" HorizontalAlignment="Right" Width="53"/>
         <TextBlock x:Name="NoteFiledHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Ctrl + Enter" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="62" Grid.Column="1" Height="16"/>
