--- a/reee_port_01/Views/MainWindow.xaml
+++ b/reee_port_01/Views/MainWindow.xaml
@@ -5,18 +5,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:reee_port_01"
         mc:Ignorable="d"
-        Title="reee: port" Height="114" MinHeight="120
-" MaxHeight="120" Width="800" MinWidth="300" Initialized="Application_Startup">
-    <Grid x:Name="MainGrid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="20*"/>
-            <ColumnDefinition Width="79*"/>
-        </Grid.ColumnDefinitions>
-        <ComboBox x:Name="NoteType" TabIndex="1" Margin="20,15,20,0" VerticalAlignment="Top" Height="25" FontSize="14" Foreground="Black" BorderBrush="{x:Null}" Background="{x:Null}" VerticalContentAlignment="Center"/>
-        <TextBox x:Name="NoteField" TabIndex="0" Height="25" Margin="0,15,20,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" Grid.Column="1" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center"/>
-        <TextBlock x:Name="NoteTypeHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Key ↑ or ↓" VerticalAlignment="Top" Foreground="Silver" Height="16" HorizontalAlignment="Right" Width="53"/>
-        <TextBlock x:Name="NoteFiledHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Ctrl + Enter" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="62" Grid.Column="1" Height="16"/>
-        <Button Content="Open Pref" Grid.Column="1" HorizontalAlignment="Left" Margin="0,61,0,0" VerticalAlignment="Top" Width="75" Click="button_Open_Pref" BorderBrush="White" Background="White"/>
+        Title="reee: port" Initialized="Application_Startup" ResizeMode="CanMinimize"
+        SizeToContent="WidthAndHeight" Closed="OnExit" Closing="OnExit">
 
-    </Grid>
+    <StackPanel>
+        <Grid x:Name="MainGrid" Width="800" Height="90">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="20*"/>
+                <ColumnDefinition Width="79*"/>
+            </Grid.ColumnDefinitions>
+            <ComboBox x:Name="NoteType" TabIndex="1" Margin="20,15,20,0" VerticalAlignment="Top" Height="25" FontSize="14" Foreground="Black" BorderBrush="{x:Null}" Background="{x:Null}" VerticalContentAlignment="Center"/>
+            <TextBox x:Name="NoteField" TabIndex="0" Height="25" Margin="0,15,20,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" Grid.Column="1" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center"/>
+            <TextBlock x:Name="NoteTypeHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Key ↑ or ↓" VerticalAlignment="Top" Foreground="Silver" Height="16" HorizontalAlignment="Right" Width="53"/>
+            <TextBlock x:Name="NoteFiledHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Ctrl + Enter" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="62" Grid.Column="1" Height="16"/>
+            <ToggleButton x:Name="PrefButton" Content="Settings" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" BorderBrush="White" Background="{x:Null}" Margin="1.4,60,0,0" HorizontalContentAlignment="Left" Foreground="Silver"/>
+            <TextBox x:Name="SpreadsheetID" Text="{Binding SpreadsheetID, Mode = TwoWay}" TabIndex="0" Height="25" Margin="45,110,20,-45" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="XMLPath" TabIndex="0" Height="25" Margin="45,156,425,-91" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="XMLPath_subfolder" TabIndex="0" Height="25" Margin="218.4,156,196,-91" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1"/>
+            <TextBox x:Name="XMLPath_documentname" TabIndex="0" Height="25" Margin="447.4,156,20,-91" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1"/>
+            <TextBlock x:Name="SpreadsheetID_Help" TextWrapping="Wrap" Text="Google Spreadsheet URL or ID" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="165" Height="16" Grid.Column="1" Margin="0,135,20,-61" />
+            <TextBlock x:Name="XML_Doc_Name_Help" TextWrapping="Wrap" Text="XML Document Name" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="120" Height="16" Grid.Column="1" Margin="0,181,20,-107" />
+            <TextBlock x:Name="XML_Doc_Path_Help" TextWrapping="Wrap" Text="XML Document Path" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="111" Height="16" Grid.Column="1" Margin="0,181,425,-107" />
+            <TextBlock x:Name="XML_Doc_Subfolder_Help" TextWrapping="Wrap" Text="Put to subfolder" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="87" Height="16" Grid.Column="1" Margin="0,181,196,-107" />
+        </Grid>
+        <Grid Width="800" Height="120">
+            <Grid.Style>
+                <Style TargetType="{x:Type Grid}">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=PrefButton, Path=IsChecked}" Value="True">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+        </Grid>
+    </StackPanel>
 </Window>
