--- a/reee_port_01/Views/MainWindow.xaml
+++ b/reee_port_01/Views/MainWindow.xaml
@@ -11,38 +11,25 @@
     <StackPanel>
         <Grid x:Name="MainGrid" Width="800" Height="90">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="20*"/>
-                <ColumnDefinition Width="79*"/>
+                <ColumnDefinition Width="160"/>
+                <ColumnDefinition Width="640"/>
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="NoteType" TabIndex="1" Margin="20,15,20,0" VerticalAlignment="Top" Height="25" FontSize="14" Foreground="Black" BorderBrush="{x:Null}" Background="{x:Null}" VerticalContentAlignment="Center"/>
-            <TextBox x:Name="NoteField" TabIndex="0" Height="25" Margin="0,15,20,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" Grid.Column="1" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center"/>
+            <TextBox x:Name="NoteField" TabIndex="0" Height="25" Margin="159,15,20,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.ColumnSpan="2"/>
             <TextBlock x:Name="NoteTypeHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Key ↑ or ↓" VerticalAlignment="Top" Foreground="Silver" Height="16" HorizontalAlignment="Right" Width="53"/>
             <TextBlock x:Name="NoteFiledHelp" Margin="0,40,20,0" TextWrapping="Wrap" Text="Ctrl + Enter" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="62" Grid.Column="1" Height="16"/>
-            <ToggleButton x:Name="PrefButton" Content="Settings" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" BorderBrush="White" Background="{x:Null}" Margin="1.4,60,0,0" HorizontalContentAlignment="Left" Foreground="Silver"/>
-            <TextBox x:Name="SpreadsheetID" Text="{Binding SpreadsheetID, Mode = TwoWay}" TabIndex="0" Height="25" Margin="0,110,198,-45" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Right" Width="382" Foreground="#FF7F7F7F"/>
-            <TextBox x:Name="XmlReportPath" Text="{Binding XmlFolder, Mode = TwoWay}" TabIndex="0" Height="25" Margin="58.4,180,198,-115" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1" Foreground="#FF7F7F7F"/>
-            <TextBox x:Name="XMLPath_subfolder" Text="{Binding XmlSubFolder, Mode = TwoWay}" TabIndex="0" Height="25" Margin="453.4,180,20,-115" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1" Foreground="#FF7F7F7F"/>
-            <TextBlock x:Name="SpreadsheetID_Help" TextWrapping="Wrap" Text="Google Spreadsheet URL or ID" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="165" Height="19" Grid.Column="1" Margin="0,135,198,-64" />
-            <TextBlock x:Name="XML_Doc_Path_Help" TextWrapping="Wrap" Text="XML Document Folder" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="121" Height="16" Grid.Column="1" Margin="0,205,198,-131" />
-            <TextBlock x:Name="XML_Doc_Subfolder_Help" TextWrapping="Wrap" Text="Put to subfolder" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="87" Height="16" Grid.Column="1" Margin="0,205,20,-131" RenderTransformOrigin="-1.648,-0.137" />
-            <Border BorderBrush="{x:Null}" Height="25" Grid.ColumnSpan="2" Margin="20,110,618,-45">
-                <TextBlock x:Name="Spreadsheet_Help" VerticalAlignment="Center" TextWrapping="Wrap" Text="Write to Google Spreadsheet" Foreground="#FF7F7F7F" HorizontalAlignment="Left" Width="162" Margin="0,3,-0.4,3.8" Grid.ColumnSpan="2" Height="18" />
-            </Border>
-            <CheckBox x:Name="GenarateGoogleSheet" IsChecked="{Binding GenarateGoogleSheet, Mode = TwoWay}" Content="" Grid.Column="1" Margin="25.4,110,0,-45" HorizontalAlignment="Left" Width="28" BorderBrush="#FFABADB3" VerticalAlignment="Center" Foreground="#FF525252"/>
-            <CheckBox x:Name="GenerateXml" IsChecked="{Binding GenerateXml, Mode = TwoWay}" Content="" Grid.Column="1" Margin="25.4,185,0,-110" HorizontalAlignment="Left" Width="28" BorderBrush="#FFABADB3" VerticalAlignment="Center" Foreground="#FF525252"/>
-            <Border BorderBrush="{x:Null}" Height="25" Grid.ColumnSpan="2" Margin="18,181,620,-116">
-                <TextBlock x:Name="XML_Help" VerticalAlignment="Center" TextWrapping="Wrap" Text="Write to Local XML Document" Foreground="#FF7F7F7F" HorizontalAlignment="Left" Width="162" Margin="0,3,-0.7,3.8" Grid.ColumnSpan="2" Height="18" />
-            </Border>
-            <TextBox x:Name="SheetRange" Text="{Binding SheetRange, Mode=TwoWay}" TabIndex="0" Height="25" Margin="453.4,110,20,-45" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1" Foreground="#FF7F7F7F"/>
-            <TextBlock x:Name="SheetRangeHelp" TextWrapping="Wrap" Text="Sheet!Range" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="68" Height="19" Grid.Column="1" Margin="0,135,20,-64" />
-            <TextBox x:Name="XmlDocName" Text="{Binding XmlDocName, Mode=TwoWay}" TabIndex="0" Height="25" Margin="453.4,232,20,-167" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1" Foreground="#FF7F7F7F"/>
-            <TextBlock x:Name="XML_Doc_Name_Help" TextWrapping="Wrap" Text="XML Document Name" VerticalAlignment="Top" Foreground="Silver" HorizontalAlignment="Right" Width="118" Height="16" Grid.Column="1" Margin="0,257,20,-183" RenderTransformOrigin="-1.648,-0.137" />
-            <TextBox x:Name="NoteTypesString" Text="{Binding NoteTypesString, Mode=TwoWay}" TabIndex="0" Height="25" Margin="129.4,278,20,-213" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" KeyDown="NoteFiled_KeyDown" AutoWordSelection="True" VerticalContentAlignment="Center" Grid.Column="1" Foreground="#FF7F7F7F"/>
-            <Border BorderBrush="{x:Null}" Height="25" Grid.ColumnSpan="2" Margin="18,278,509,-213">
-                <TextBlock x:Name="NoteTypes_Help" VerticalAlignment="Center" TextWrapping="Wrap" Text="Note Types (comma separated, applied on restart)" Foreground="#FF7F7F7F" Margin="0,3,-0.2,3.8" Grid.ColumnSpan="2" Height="18" />
-            </Border>
+            <ToggleButton x:Name="PrefButton" Content="Settings" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="50" BorderBrush="White" Background="{x:Null}" Margin="1,60,0,0" HorizontalContentAlignment="Left" Foreground="Silver" Height="19"/>
+            <TextBox x:Name="SpreadsheetID" Text="{Binding SpreadsheetID, Mode = TwoWay}" TabIndex="0" Margin="20,135,0,-70" TextWrapping="Wrap" FontSize="14" AutoWordSelection="True" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="380" Foreground="#FF7F7F7F" Grid.ColumnSpan="2"/>
+            <TextBlock x:Name="SpreadsheetID_Help" TextWrapping="Wrap" Text="Google Spreadsheet URL or ID" VerticalAlignment="Top" Foreground="Silver" Height="20" Margin="0,160,399,-90" HorizontalAlignment="Right" Grid.Column="1" />
+            <TextBlock x:Name="Spreadsheet_Help" VerticalAlignment="Top" TextWrapping="Wrap" Text="Write to Google Spreadsheet" Foreground="#FF7F7F7F" HorizontalAlignment="Left" Width="191" Margin="20,113,0,-43" Height="20" FontSize="14" Grid.ColumnSpan="2" />
+            <CheckBox x:Name="GenarateGoogleSheet" IsChecked="{Binding GenarateGoogleSheet, Mode = TwoWay}" Content="" Margin="44,115,0,-40" HorizontalAlignment="Left" Width="28" BorderBrush="#FFABADB3" VerticalAlignment="Center" Foreground="#FF525252" Height="15" Grid.Column="1"/>
+            <TextBox x:Name="SheetRange" Text="{Binding SheetRange, Mode=TwoWay}" TabIndex="0" Height="25" Margin="245,135,285,-70" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" AutoWordSelection="True" VerticalContentAlignment="Center" Foreground="#FF7F7F7F" Grid.Column="1" />
+            <TextBlock x:Name="SheetRangeHelp" TextWrapping="Wrap" Text="Sheet!Range" VerticalAlignment="Top" Foreground="Silver" Height="20" Margin="0,160,285,-90" Grid.Column="1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" />
+            <TextBlock x:Name="NoteTypes" VerticalAlignment="Center" TextWrapping="Wrap" Text="Note Types" Foreground="#FF7F7F7F" Margin="20,184,44,-114" Height="20" FontSize="14" />
+            <TextBox x:Name="NoteTypesString" Text="{Binding NoteTypesString, Mode=TwoWay}" TabIndex="0" Height="25" Margin="20,204,400,-139" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14"  AutoWordSelection="True" VerticalContentAlignment="Center" Foreground="#FF7F7F7F" Grid.ColumnSpan="2" />
+            <TextBlock x:Name="NoteTypes_Help" TextWrapping="Wrap" Text="Comma separated, applied on restart" VerticalAlignment="Top" Foreground="Silver" Height="20" Margin="0,229,400,-159" Grid.Column="1" HorizontalAlignment="Right"/>
         </Grid>
-        <Grid Width="800" Height="230">
+        <Grid Width="800" Height="180">
             <Grid.Style>
                 <Style TargetType="{x:Type Grid}">
                     <Setter Property="Visibility" Value="Collapsed"/>
