--- a/reee_port_01/Views/MainWindow.xaml
+++ b/reee_port_01/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:reee_port_01"
         mc:Ignorable="d"
-        Title="reee: port" Initialized="Application_Startup" ResizeMode="CanMinimize"
+        Title="reee: port" Initialized="Application_Startup" ResizeMode="CanMinimize" Deactivated="Application_Deactivated"
         SizeToContent="WidthAndHeight" Closed="OnExit" Closing="OnExit">
 
     <StackPanel>
@@ -28,8 +28,10 @@
             <TextBlock x:Name="NoteTypes" VerticalAlignment="Center" TextWrapping="Wrap" Text="Note Types" Foreground="#FF7F7F7F" Margin="20,184,44,-114" Height="20" FontSize="14" />
             <TextBox x:Name="NoteTypesString" Text="{Binding NoteTypesString, Mode=TwoWay}" TabIndex="0" Height="25" Margin="20,204,400,-139" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14"  AutoWordSelection="True" VerticalContentAlignment="Center" Foreground="#FF7F7F7F" Grid.ColumnSpan="2" />
             <TextBlock x:Name="NoteTypes_Help" TextWrapping="Wrap" Text="Comma separated, applied on restart" VerticalAlignment="Top" Foreground="Silver" Height="20" Margin="0,229,400,-159" Grid.Column="1" HorizontalAlignment="Right"/>
+            <TextBlock x:Name="AlwaysOnTop_Help" VerticalAlignment="Top" TextWrapping="Wrap" Text="Always on Top" Foreground="#FF7F7F7F" HorizontalAlignment="Left" Width="96" Margin="20,276,0,-206" Height="20" FontSize="14" />
+            <CheckBox x:Name="AlwaysOnTop" IsChecked="{Binding AlwaysOnTop, Mode=TwoWay}" Content="" Margin="121,279,0,-204" HorizontalAlignment="Left" Width="28" BorderBrush="#FFABADB3" VerticalAlignment="Center" Foreground="#FF525252" Height="15"/>
         </Grid>
-        <Grid Width="800" Height="180">
+        <Grid Width="800" Height="230">
             <Grid.Style>
                 <Style TargetType="{x:Type Grid}">
                     <Setter Property="Visibility" Value="Collapsed"/>
