--- a/reee_port_01/Views/App.xaml
+++ b/reee_port_01/Views/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="reee_port_01.App"
+﻿<Application x:Class="reeeport.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:reee_port_01"
+             xmlns:local="clr-namespace:reeeport"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
          
