--- a/reee_port_01/Views/MainWindow.xaml
+++ b/reee_port_01/Views/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Name="MainWin" x:Class="reee_port_01.MainWindow"
+﻿<Window x:Name="MainWin" x:Class="reeeport.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:reee_port_01"
+        xmlns:local="clr-namespace:reeeport"
         mc:Ignorable="d"
         Title="reee: port" Initialized="Application_Startup" MaxHeight="120" MinHeight="120" MinWidth="500" Width="700" Deactivated="Application_Deactivated" Closed="OnExit" Closing="OnExit">
 
