--- a/reee_port_01/Views/PreferencesWindow.xaml
+++ b/reee_port_01/Views/PreferencesWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="reee_port_01.PreferencesWindow"
+﻿<Window x:Class="reeeport.PreferencesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:reee_port_01"
+        xmlns:local="clr-namespace:reeeport"
         mc:Ignorable="d"
         Title="reee: preferences" Height="270" Width="600" ResizeMode="CanMinimize" Closing="Closing_Event">
     <Grid x:Name="PrefWindowGrid" Margin="0,0,0.6,-0.2">
